--- a/F/FiberNlse/Compat.toml
+++ b/F/FiberNlse/Compat.toml
@@ -1,10 +1,16 @@
 [0]
+FFTW = "1.3.2-1.3"
 Plots = "1.21"
 julia = "1.7.2-1.7"
-
-[0-1]
-FFTW = "1.3.2-1.3"
 
 [1]
 ProgressBars = "1.4"
 julia = "1.7"
+
+["1.0"]
+FFTW = "1.3.2-1.3"
+
+["1.1-1"]
+CompatHelper = "3"
+DifferentialEquations = "7"
+FFTW = "1"
