--- a/F/FiberNlse/Deps.toml
+++ b/F/FiberNlse/Deps.toml
@@ -6,3 +6,9 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 
 [1]
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
+
+["1.1-1"]
+CompatHelper = "aa819f21-2bde-4658-8897-bab36330d9b7"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
