--- a/F/FiberNlse/Versions.toml
+++ b/F/FiberNlse/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "7aa562a047e41a5d83c52aae7ae54c76ba775de4"
 
 ["1.0.0"]
 git-tree-sha1 = "143a02806ccecc719f117cc00f2649bfadd69fdb"
+
+["1.1.0"]
+git-tree-sha1 = "0429926a09f54160d7d60e2299ca830e3b1a768a"
